--- a/JsonApiDotNetCore/project.json
+++ b/JsonApiDotNetCore/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.4-beta-*",
+  "version": "0.1.4",
   "packOptions": {
     "summary": "Complete JSONAPI Middleware, Routing, and Controller package for .Net Core",
     "tags": [
